[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/MainControl.gd" type="Script" id=1]
[ext_resource path="res://assets/okan_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/KIN668.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://assets/button_styles/normal.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/button_styles/hover.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/button_styles/pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/line_edit_styles/line_edit_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/line_edit_styles/line_edit_focus.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/fonts/all_editable_texts.tres" type="DynamicFont" id=9]
[ext_resource path="res://src/icon.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 15
outline_color = Color( 0.109804, 0.109804, 0.105882, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.109804, 0.109804, 0.105882, 1 )
border_color = Color( 0.109804, 0.109804, 0.105882, 1 )
border_blend = true
shadow_color = Color( 0.109804, 0.109804, 0.105882, 1 )
shadow_size = 2

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="Animation" id=6]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("error_text:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 4.8 ),
"transitions": PoolRealArray( 0.31864, 2.07053, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1000, 750 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmDialog_Delete" type="ConfirmationDialog" parent="."]
margin_left = 530.901
margin_top = 384.045
margin_right = 830.901
margin_bottom = 484.045
hint_tooltip = "If you click okay, the items will be deleted. Forever. Are you sure you want that?"
window_title = "Are you sure?"
dialog_text = "Can not be undone!"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="createTaskLabel_text" type="Label" parent="."]
visible = false
margin_left = 287.543
margin_top = 22.6562
margin_right = 439.544
margin_bottom = 78.6559
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.109804, 0.109804, 0.105882, 1 )
text = "Create a task:"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_text" type="Label" parent="."]
visible = false
margin_left = 357.711
margin_top = 139.363
margin_right = 957.706
margin_bottom = 184.363
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.803922, 0.243137, 0.0705882, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "error.....error.....error...."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 347.0
margin_top = 86.0
margin_right = 1013.0
margin_bottom = 130.0
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 9 )
clear_button_enabled = true
placeholder_text = "ENTER TASK HERE...for example: Edit term paper"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitBtn" type="Button" parent="."]
margin_left = 1052.98
margin_top = 79.3674
margin_right = 1195.98
margin_bottom = 138.367
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 92.0
margin_top = 185.0
margin_right = 1209.0
margin_bottom = 242.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton_ManageTasks" type="MenuButton" parent="Panel"]
margin_left = 893.986
margin_top = 2.6189
margin_right = 1093.99
margin_bottom = 52.6189
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.490196 )
custom_colors/font_color_pressed = Color( 0.576471, 0.576471, 0.576471, 1 )
text = "Manage Tasks"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_left = 23.0
margin_right = 847.0
margin_bottom = 60.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PercentageCompletionLabel_text" type="Label" parent="Panel/HBoxContainer"]
margin_left = 137.0
margin_top = 22.0
margin_right = 281.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Task Completion:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Panel/HBoxContainer"]
margin_left = 285.0
margin_right = 289.0
margin_bottom = 60.0

[node name="TotalTaskCountLabel_text" type="Label" parent="Panel/HBoxContainer"]
margin_left = 293.0
margin_top = 22.0
margin_right = 401.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Total Tasks:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="Panel/HBoxContainer"]
margin_left = 405.0
margin_right = 409.0
margin_bottom = 60.0

[node name="HiddenTaskCountLabel_text" type="Label" parent="Panel/HBoxContainer"]
margin_left = 413.0
margin_top = 22.0
margin_right = 530.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Hidden Tasks:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="Panel/HBoxContainer"]
margin_left = 534.0
margin_right = 538.0
margin_bottom = 60.0

[node name="DisplayedTaskCountLabel_text" type="Label" parent="Panel/HBoxContainer"]
margin_left = 542.0
margin_top = 22.0
margin_right = 686.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Displayed Tasks:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator4" type="VSeparator" parent="Panel/HBoxContainer"]
visible = false
margin_left = 686.0
margin_right = 690.0
margin_bottom = 60.0

[node name="PopupMenu_CompletedTasks" type="PopupMenu" parent="."]
margin_left = 1091.06
margin_top = 163.948
margin_right = 1111.06
margin_bottom = 183.948

[node name="PopupMenu_Inactive_Uncompleted_Tasks" type="PopupMenu" parent="."]
margin_left = 1091.06
margin_top = 163.948
margin_right = 1111.06
margin_bottom = 183.948

[node name="PopupMenu_AllInactiveTasks" type="PopupMenu" parent="."]
margin_left = 1091.06
margin_top = 163.948
margin_right = 1111.06
margin_bottom = 183.948

[node name="PopupMenu_SelectedTasks" type="PopupMenu" parent="."]
margin_left = 1091.06
margin_top = 163.948
margin_right = 1111.06
margin_bottom = 183.948

[node name="PopupMenu_AllTasks" type="PopupMenu" parent="."]
margin_left = 1091.06
margin_top = 163.948
margin_right = 1111.06
margin_bottom = 183.948

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 90.3388
margin_top = 246.695
margin_right = 1212.34
margin_bottom = 678.695
rect_min_size = Vector2( 1122, 432 )
custom_styles/bg = SubResource( 5 )
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_left = 49.0
margin_top = 16.0
margin_right = 1073.0
margin_bottom = 416.0
grow_horizontal = 2
rect_min_size = Vector2( 1024, 400 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 2 )
custom_constants/separation = 100
alignment = 1

[node name="Node" type="Node" parent="ScrollContainer/VBoxContainer" groups=[
"ignore",
]]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/text_fade = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 208.961, 110.507 )
texture = ExtResource( 10 )
[connection signal="tree_exiting" from="." to="." method="_on_Control_tree_exiting"]
[connection signal="confirmed" from="ConfirmDialog_Delete" to="." method="_on_ConfirmDialog_Delete_confirmed"]
[connection signal="pressed" from="SubmitBtn" to="." method="_on_SubmitBtn_pressed"]
[connection signal="id_pressed" from="PopupMenu_CompletedTasks" to="." method="_on_PopupMenu_CompletedTasks_id_pressed"]
[connection signal="id_pressed" from="PopupMenu_Inactive_Uncompleted_Tasks" to="." method="_on_PopupMenu_Inactive_Uncompleted_Tasks_id_pressed"]
[connection signal="id_pressed" from="PopupMenu_AllInactiveTasks" to="." method="_on_PopupMenu_AllInactiveTasks_id_pressed"]
[connection signal="id_pressed" from="PopupMenu_SelectedTasks" to="." method="_on_PopupMenu_SelectedTasks_id_pressed"]
[connection signal="id_pressed" from="PopupMenu_AllTasks" to="." method="_on_PopupMenu_AllTasks_id_pressed"]
